# otus

./: .gitignore  .travis.yml  Doxyfile.in  annotated.html  bintray-preconf.json  classes.html  classis__stl__container__like-members.html  classis__stl__container__like.html  classis__stl__container__like__coll__graph.map  classis__stl__container__like__coll__graph.md5  classis__string-members.html  classis__string.html  classis__string__coll__graph.map  classis__string__coll__graph.md5  descriptor.json  dir_294c2c956d3dca58929c5371afcf262e.html  dir_9b2d3bd35a3b31dbb2baa8d4615f1ef4.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_6.map  (+45 more)
01_1/: CMakeLists.txt  README.md  build.cmd  main.cpp
01_2/: CMakeLists.txt  README.md  build.cmd  build_and_run.cmd  gen.cmd  ip_filter.cpp  ip_filter.h  main.cpp  tests.cmd  tests.cpp
01_2/gtest/: CMakeLists.txt
01_2/src/: ip_filter.cpp  ip_filter.h  main.cpp  tests.cpp
02/: CMakeLists.txt  README.md  build.cmd  build_and_run.cmd  clean.cmd  gen.cmd
02/src/: custom_allocator.cpp  custom_allocator.h  main.cpp  my_allocator.h  my_list.h
03/: CMakeLists.txt  README.md  build_and_run.cmd
03/src/: main.cpp  print_ip.h  traits.h  utils.h
search/: all_0.js  all_1.js  all_3.js  all_4.js  all_6.js  classes_0.js  classes_1.js  files_1.js  files_2.js  functions_1.js  functions_2.js  searchdata.js  typedefs_0.js  variables_0.js
